--- a/conf/locale/zh_CN/LC_MESSAGES/django.po
+++ b/conf/locale/zh_CN/LC_MESSAGES/django.po
@@ -8,11 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-<<<<<<< HEAD
-"POT-Creation-Date: 2011-02-13 19:15+0800\n"
-=======
-"POT-Creation-Date: 2011-02-13 19:23+0800\n"
->>>>>>> Rebase to latest
+"POT-Creation-Date: 2011-02-13 19:41+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -192,7 +188,7 @@ msgstr "注册"
 
 #: templates/master.html:96
 msgid "Have an account?"
-msgstr "创建账户"
+msgstr "已经拥有账户?"
 
 #: templates/master.html:97
 msgid "Sign in"
