--- a/conf/locale/zh_CN/LC_MESSAGES/django.po
+++ b/conf/locale/zh_CN/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-17 21:54+0800\n"
+"POT-Creation-Date: 2011-03-17 22:41+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,6 +16,42 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: common/templates/error.html:6
+msgid "Sorry, got a error :-("
+msgstr "对不起,遇到错误了:-("
+
+#: common/templates/master.html:48 group/templates/groupsite_master.html:54
+msgid "Groups"
+msgstr "小组"
+
+#: common/templates/master.html:53
+msgid "Ask"
+msgstr ""
+
+#: common/templates/master.html:73
+msgid "Settings"
+msgstr "设置"
+
+#: common/templates/master.html:79
+msgid "Logout"
+msgstr "登出"
+
+#: common/templates/master.html:106
+msgid "Sign up"
+msgstr "注册"
+
+#: common/templates/master.html:114
+msgid "Have an account?"
+msgstr "已经拥有账户?"
+
+#: common/templates/master.html:115
+msgid "Sign in"
+msgstr "登陆"
+
+#: common/templates/master.html:120
+msgid "(Google Account is supported)"
+msgstr "(支持Google账户登陆)"
 
 #: group/templates/group_display.html:20 group/templates/topic_display.html:17
 msgid "New Topic"
@@ -63,10 +99,6 @@ msgstr "回复"
 #: group/templates/groupsite_master.html:50
 msgid "Topics"
 msgstr "话题"
-
-#: group/templates/groupsite_master.html:54 templates/master.html:48
-msgid "Groups"
-msgstr "小组"
 
 #: group/templates/groupsite_master.html:63
 msgid "Want to create a new group?"
@@ -192,19 +224,19 @@ msgstr "更换图片"
 msgid "Save"
 msgstr "保存"
 
-#: home/views/uhome.py:34 home/views/uhome.py:60
+#: home/views/usersite.py:34 home/views/usersite.py:60
 msgid "User Name"
 msgstr "用户名"
 
-#: home/views/uhome.py:35 home/views/uhome.py:62
+#: home/views/usersite.py:35 home/views/usersite.py:62
 msgid "Password"
 msgstr "密码"
 
-#: home/views/uhome.py:58 home/views/userui.py:37
+#: home/views/usersite.py:58 home/views/userui.py:37
 msgid "Full Name"
 msgstr "昵称"
 
-#: home/views/uhome.py:64 home/views/userui.py:41
+#: home/views/usersite.py:64 home/views/userui.py:41
 msgid "Email"
 msgstr "邮件地址"
 
@@ -219,38 +251,6 @@ msgstr "用户头像"
 #: home/views/userui.py:73
 msgid "Your photo has been changed.:-)"
 msgstr "头像更换成功"
-
-#: templates/error.html:6
-msgid "Sorry, got a error :-("
-msgstr "对不起,遇到错误了:-("
-
-#: templates/master.html:53
-msgid "Ask"
-msgstr ""
-
-#: templates/master.html:73
-msgid "Settings"
-msgstr "设置"
-
-#: templates/master.html:79
-msgid "Logout"
-msgstr "登出"
-
-#: templates/master.html:106
-msgid "Sign up"
-msgstr "注册"
-
-#: templates/master.html:114
-msgid "Have an account?"
-msgstr "已经拥有账户?"
-
-#: templates/master.html:115
-msgid "Sign in"
-msgstr "登陆"
-
-#: templates/master.html:120
-msgid "(Google Account is supported)"
-msgstr "(支持Google账户登陆)"
 
 #~ msgid "Latest Posts from the Groups You Followed"
 #~ msgstr "关注小组的最新动态"
